--- a/views/order.hbs
+++ b/views/order.hbs
@@ -62,7 +62,7 @@
             Дата доставки
         </p>
         <p class="text14-black">
-            {{formatDate order.deliveryInfo.planReceivingDateTimeFrom}} - {{formatDate order.deliveryInfo.receivingDateTo}}
+            {{formatDateRange order.deliveryInfo.planReceivingDateTimeFrom order.deliveryInfo.receivingDateTo}}
         </p>
     </div>
 
