add fix mirror7

--- a/views/web-app.auth.html
+++ b/views/web-app.auth.html
@@ -16,7 +16,7 @@
             telegramId: tg.initDataUnsafe.user.id,
         };
 
-        fetch('api/webapp/auth', {
+        fetch('/api/webapp/auth', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
